# FluxForge

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README-TESTING.md  README.md  SECURITY.md  clippy.toml  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml
docker/: init-mysql.sql  init-postgres.sql  test-env.yml
examples/: mysql2mysql.toml  mysql2postgres.toml  postgres2postgres.toml  test-mapping.toml
src/: business.rs  cli.rs  config.rs  core.rs  default_mapping.toml  lib.rs  main.rs  ops.rs
src/drivers/: mod.rs  mysql.rs  postgres.rs
tests/: mysql_integration_test.rs  mysql_logic_tests.rs  mysql_mysql_migration_test.rs  mysql_mysql_replication_test.rs  mysql_postgres_replication_test.rs  postgres_logic_tests.rs  postgres_postgres_replication_test.rs
tests/common/: mod.rs
