[package]
name = "fluxforge"
version = "0.1.0"
authors = ["Andreas Frackowiak <af@ins.de>"]
edition = "2024"
description = "A database schema converter and migration engine for MySQL and PostgreSQL"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fluxef/FluxForge"
keywords = ["database", "mysql", "postgres", "migration", "schema"]
categories = ["database", "command-line-utilities"]

[lib]
# Die Library-Sektion ist optional, wenn die Datei src/lib.rs heißt.
# Sie erlaubt es anderen, fluxforge als Abhängigkeit zu nutzen.
name = "fluxforge"
path = "src/lib.rs"

[[bin]]
# Das Binary wird beim Aufruf von 'cargo install fluxforge' installiert.
name = "fluxforge"
path = "src/main.rs"

[dependencies]
# CLI Parsing
clap = { version = "4.5", features = ["derive"] }

# Async Runtime
tokio = { version = "1.49", features = ["full"] }

# Serialisierung für das interne JSON-Format
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Datenbank-Treiber (Beispiele)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres","chrono"] }

# Konfiguration (TOML für mapping.toml)
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.10"
async-trait = "0.1.89"
postgres = "0.19"
futures = "0.3.31"
csv = "1.3"
chrono = "0.4.43"
petgraph = "0.6"
indicatif = "0.17"
indexmap = "2.13.0"
