[package]
name = "fluxforge"
version = "0.5.0"
authors = ["Andreas Frackowiak <af@ins.de>"]
edition = "2024"
rust-version = "1.92"
description = "A database schema converter and migration engine for MySQL and PostgreSQL"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fluxef/FluxForge"
keywords = ["database", "mysql", "postgres", "migration", "schema"]
categories = ["database", "command-line-utilities"]

[lib]
# so other can use "fluxforge" as dependency / crate
name = "fluxforge"
path = "src/lib.rs"

[[bin]]
# so the binary "fluxforge" is installed with 'cargo install fluxforge'
name = "fluxforge"
path = "src/main.rs"

[features]
integration-tests = []

[lints.clippy]
# deny dangerous patterns (should be allowed in tests, we do want panics in tests as feedback)
unwrap_used = "warn"  # warn instead of deny for fix check
todo = "deny"         # we should be finished before publishing
dbg_macro = "deny"    # no remaining debug output in production
panic = "deny"        # panics() in production are bad
similar_names = "allow"


[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "chrono", "rust_decimal", "uuid", "ipnetwork"] }
rust_decimal = { version = "1.40", features = ["serde"] }
uuid = { version = "1.21", features = ["v4", "serde"] }
ipnetwork = "0.20"
toml = "0.8"
async-trait = "0.1.89"
futures = "0.3.32"
chrono = {  version = "0.4.43", features = ["serde"] }
petgraph = "0.8"
indicatif = "0.18"
indexmap = { version = "2.13.0", features = ["serde"] }
async-stream = "0.3.6"
thiserror = "2.0"

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "postgres"] }
tokio = { version = "1", features = ["full"] }
